--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </h4>
     </p>
 
-    <table>
+    <table class="code" id="code">
         <caption>Table 1. Table of codes.</caption>
         <tr>
             <th>Leter</th>
@@ -118,7 +118,7 @@
             <td><font size="4">🦴</font></td>
         </tr>
     </table>
-    <table style="text-align: justify;">
+    <table style="text-align: justify;" class="text" id="text">
         <tr>
             <td>
                 <b><font size="5">Guess the hidden text. <br>This is my text: <br>
